test/bad/classes/constructor06.px

class A def
    constructor() def
        skip

class B(A) def
    constructor() def
        super()
